add LabelService